--- a/Login_page/public/styl1.css
+++ b/Login_page/public/styl1.css
@@ -1,98 +1,110 @@
-@import url('https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=DynaPuff:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-*{
-     font-family: "Atma", system-ui;
-    color:  white;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+* {
+      font-family: "Raleway", sans-serif;
+    margin: 0cap;
+    padding: 0cap;
 }
 
 body {
-    width: 98%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    width: 100%;
     background: linear-gradient(-45deg, #1e3c72, #2a5298, #0f2027, #203a43);
     background-size: 400% 400%;
     animation: gradientBG 15s ease infinite;
 }
 
-nav{
+#bg-video {
     position: fixed;
-    top: 0cap;
-    background-color: rgb(0, 149, 255);
-    color: white;
+    top: 0;
+    left: 0;
+    min-width: 100vw;
+    max-height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+}
+.heading{
+    font-size: 35px;
+}
+.container {
+    display: grid;
+    height: 100vh;
     width: 100vw;
+    grid-template-columns: 1fr 1fr;
+}
+
+.login_conatainer {
+    grid-column: 2 / 3;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.container{
-    display: flex;
-    margin-top: 20vh;
-    flex-direction: column;
-    width: 40vw;
-    height: 36vh;
-    align-items: center;
-    justify-content: center;
-}
-.mail{
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-}
-.text{
-    height: 50px;
-    width: 350px;
-    background-color: black;
+
+.page {
+    height: 70vh;
+    width: 50%;
+    background-color:transparent;
     color: white;
-    margin: 0%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.signup {
     border: 0cap;
-    font-size: 18px;
+    text-decoration: underline;
+    background-color: transparent;
+    color: rgb(144, 144, 255);
     cursor: pointer;
 }
-.adj{
-    border-radius: 10px;
+
+.sig {
     display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
+    flex-direction: row;
+    gap: 10px;
 }
 
+.text {
+    width: 300px;
+    height: 50px;
+    border: 0cap;
+    background-color: rgb(243, 243, 243);
+    border-radius: 5px;
+}
 
+input::placeholder {
+    color: black;
+    padding-left: 10px;
+}
 
-select{
-    width: 350px;
+.io {
+    margin-bottom: 5px;
+}
+.button{
+    width: 300px;
     height: 30px;
-    color: white;
-    background-color: black;
-    border: 0cap;
-    margin-bottom: 10px;
-
-}
-.login{
-    background-color: rgb(8, 185, 8);
-    color: white;
-    border: 0cap;
-    height: 35px;
-    margin-top: 10px;
-    font-size: 20px;
-}
-.signup{
-    width: 350px;
     display: flex;
-    align-items: center;
-    justify-content: center
+    justify-content: center;
+    background-color: gray;
+    border-radius: 5px;
 }
 .bt{
-    width:350px;
-    background-color: rgb(78, 172, 240);
-    height: 35px;
+    background-color: transparent;
     border: 0cap;
-    margin-bottom: 10px;
-    font-size: 20px;
+    width: 300px;
+    cursor: pointer;
 }
-@keyframes gradientBG {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+.colory{
+    color: rgb(0, 183, 255);
+}
+.hover-effect {
+  border-radius: 12px;
+  position: relative;
+  transition: all 0.4s ease;
+  z-index: 1;
 }
 
+.hover-effect:hover {
+  border-color: #00f;
+  box-shadow: 0 0 15px 4px rgb(0, 183, 255); /* blue glow */
+  cursor: pointer;
+}
