--- a/Login_page/views/index1.ejs
+++ b/Login_page/views/index1.ejs
@@ -17,22 +17,28 @@
         <div class="image"></div>
         <div class="login_conatainer">
             <div class="page">
-               <div class="heading"> <h2>Login in to</h2><h2 class="colory"> Your Account</h2></div>
-              <div class="sig">  <p>Don't have any account? </p>
-                <form action="/creat_new" method="post"><button type="submit" class="signup">Sign Up</button></form>
+                <div class="heading">
+                    <h2>Login in to</h2>
+                    <h2 class="colory"> Your Account</h2>
+                </div>
+                <div class="sig">
+                    <p>Don't have any account? </p>
+                    <form action="/creat_new" method="post"><button type="submit" class="signup">Sign Up</button></form>
                 </div>
                 <div class="input">
-                <form action="/info" method="post">
-                  <div class="io "><input type="text" placeholder="Enter your Email address" class="text hover-effect" name="gmail"></div> 
-                 <div class="io">   <input type="password" class="text hover-effect" placeholder="Password of account" name="pwd"></div> 
-                   <div class="io"> <select name="clint" class="text hover-effect">
-                        <option value="patient">Patient</option>
-                        <option value="doctor">Doctor</option>
-                        <option value="admin">Admin</option>
-                    </select>
-            </div> 
-                    <div class="button hover-effect"><button type="submit" class="bt">Login</button></div>
-                </form>
+                    <form action="/info" method="post">
+                        <div class="io "><input type="text" placeholder="Enter your Email address"
+                                class="text hover-effect" name="gmail"></div>
+                        <div class="io"> <input type="password" class="text hover-effect"
+                                placeholder="Password of account" name="pwd"></div>
+                        <div class="io"> <select name="clint" class="text hover-effect">
+                                <option value="patient">Patient</option>
+                                <option value="doctor">Doctor</option>
+                                <option value="admin">Admin</option>
+                            </select>
+                        </div>
+                        <div class="button hover-effect"><button type="submit" class="bt">Login</button></div>
+                    </form>
                 </div>
             </div>
         </div>
